Agregando variable de almacenamiento

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="global-content">
             <div class="content-answer" id="contentAnswer">
                 <div class="history-answer" id="historyAnswer">
-                590+4(12)
+                0
                 </div>
                 <div class="actual-answer" id="actualAnswer">
-                   7128 
+                   0
                 </div>
             </div>
             <div class="content-buttons">
@@ -27,14 +27,14 @@
                     <button class="button-comand" id="buttonClearError">CE</button>
                     <button class="button-comand">%</button>
                     <button class="button-comand">C</button>
-                    <button class="button-comand"></button>
+                    <button class="button-comand"><-x</button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-comand">1/x</button>
                     <button class="button-comand">X°</button>
-                    <button class="button-comand"></button>
-                    <button class="button-comand"></button>
+                    <button class="button-comand">√</button>
+                    <button class="button-comand">➗</button>
                 </div>
 
                 <div class="content-buttons-all">
@@ -48,14 +48,14 @@
                     <button class="button-general" id="buttonFour">4</button>
                     <button class="button-general" id="buttonFive">5</button>
                     <button class="button-general" id="buttonSix">6</button>
-                    <button class="button-comand" >+</button>
+                    <button class="button-comand" >➕</button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-general" id="buttonOne">1</button>
                     <button class="button-general" id="buttonTwo">2</button>
                     <button class="button-general" id="buttonThree">3</button>
-                    <button class="button-comand" id="button">-</button>
+                    <button class="button-comand" id="button">➖</button>
                 </div>
 
                 <div class="content-buttons-all">
