Agregando dinamicidad a los botones de operador

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/index.css">
     <title>Calculator</title>
+    
 </head>
 
 <body>
@@ -25,49 +26,51 @@
             <div class="content-buttons">
                 <div class="content-buttons-all">
                     <button class="button-comand" id="buttonClearError">CE</button>
-                    <button class="button-comand">%</button>
+                    <button class="button-comand" id="buttonPorcentage"><i class="fa-solid fa-percent"></i></button>
                     <button class="button-comand">C</button>
-                    <button class="button-comand"><-x</button>
+                    <button class="button-comand"><i class="fa-solid fa-delete-left"></i></button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-comand">1/x</button>
-                    <button class="button-comand">X°</button>
-                    <button class="button-comand">√</button>
-                    <button class="button-comand">➗</button>
+                    <button class="button-comand" id="buttonEmpowerment"><i class="fa-solid fa-superscript"></i></button>
+                    <button class="button-comand" id="buttonSquare"><i class="fa-solid fa-square-root-variable"></i></button>
+                    <button class="button-comand" id="buttonDivision"><i class="fa-solid fa-divide"></i></button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-general" id="buttonSeven">7</button>
                     <button class="button-general" id="buttonEight">8</button>
                     <button class="button-general" id="buttonNine">9</button>
-                    <button class="button-comand">X</button>
+                    <button class="button-comand" id="buttonMultiplication"><i class="fa-solid fa-xmark"></i></button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-general" id="buttonFour">4</button>
                     <button class="button-general" id="buttonFive">5</button>
                     <button class="button-general" id="buttonSix">6</button>
-                    <button class="button-comand" >➕</button>
+                    <button class="button-comand" id="buttonAddition" ><i class="fa-solid fa-plus"></i></button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-general" id="buttonOne">1</button>
                     <button class="button-general" id="buttonTwo">2</button>
                     <button class="button-general" id="buttonThree">3</button>
-                    <button class="button-comand" id="button">➖</button>
+                    <button class="button-comand" id="buttonSubstraction"><i class="fa-solid fa-minus"></i></button>
                 </div>
 
                 <div class="content-buttons-all">
                     <button class="button-general">+/-</button>
                     <button class="button-general" id="buttonCero">0</button>
-                    <button class="button-general">.</button>
-                    <button class="button-equal">=</button>
+                    <button class="button-general" >.</button>
+                    <button class="button-equal" ><i class="fa-solid fa-equals"></i></button>
                 </div>
             </div>
         </div>
     </section>
     <script src="./js/index.js" type="module"></script>
+    <script src="https://kit.fontawesome.com/7065ce0260.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
