--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    
     <section class="section-calculator">
-        <h1>CALCULADORA</h1>
+        <h1>CalculAr</h1>
         <div class="global-content">
             <div class="content-answer" id="contentAnswer">
                 <div class="history-answer" id="historyAnswer">
