Agregando funcionalidad a mi campo de resultado y botones de borrado

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </div>
             <div class="content-buttons">
                 <div class="content-buttons-all">
-                    <button class="button-comand" id="buttonClearError">CE</button>
                     <button class="button-comand" id="buttonPorcentage"><i class="fa-solid fa-percent"></i></button>
-                    <button class="button-comand">C</button>
-                    <button class="button-comand"><i class="fa-solid fa-delete-left"></i></button>
+                    <button class="button-comand" id="buttonClearError">CE</button>
+                    <button class="button-comand" id="buttonClear">C</button>
+                    <button class="button-comand" id="delete"><i class="fa-solid fa-delete-left"></i></button>
                 </div>
 
                 <div class="content-buttons-all">
@@ -63,7 +63,7 @@
                     <button class="button-general">+/-</button>
                     <button class="button-general" id="buttonCero">0</button>
                     <button class="button-general" >.</button>
-                    <button class="button-equal" ><i class="fa-solid fa-equals"></i></button>
+                    <button class="button-equal" id="buttonEqual"><i class="fa-solid fa-equals"></i></button>
                 </div>
             </div>
         </div>
